[gd_scene load_steps=39 format=3 uid="uid://dak3j323lms0s"]

[ext_resource type="Texture2D" uid="uid://bww2o6jkad7nf" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Knockback/Knockback05.png" id="1_06ane"]
[ext_resource type="Script" uid="uid://c2r11jo87m5e6" path="res://chars/sleeping_guard.gd" id="1_m3d4o"]
[ext_resource type="Texture2D" uid="uid://cshwi53lwaqph" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Idle/Idle01.png" id="2_m3d4o"]
[ext_resource type="Texture2D" uid="uid://woaeddeaesia" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Idle/Idle02.png" id="3_ni1v3"]
[ext_resource type="Texture2D" uid="uid://bsrw6gsqslsy1" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Idle/Idle03.png" id="4_2a35u"]
[ext_resource type="Texture2D" uid="uid://c2eu0v2wn2wt4" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Idle/Idle04.png" id="5_wrgb2"]
[ext_resource type="Texture2D" uid="uid://d1w1yb7ixukhu" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Idle/Idle05.png" id="6_5be7e"]
[ext_resource type="Texture2D" uid="uid://didp24116d82f" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Idle/Idle06.png" id="7_c6vqc"]
[ext_resource type="Texture2D" uid="uid://bwdp8hfv8bdyl" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Idle/Idle07.png" id="8_02m4m"]
[ext_resource type="Texture2D" uid="uid://f4e3v7wnt8gb" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Die/Die01.png" id="9_ej1wm"]
[ext_resource type="Texture2D" uid="uid://dbogkdhnf6xwc" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Die/Die02.png" id="10_2okjt"]
[ext_resource type="Texture2D" uid="uid://ckrfei1u51cmu" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Die/Die03.png" id="11_03adl"]
[ext_resource type="Texture2D" uid="uid://cv7161cotu7c5" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Die/Die04.png" id="12_ibv3t"]
[ext_resource type="Texture2D" uid="uid://bv3mowd6dkpgt" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Die/Die05.png" id="13_fg2nf"]
[ext_resource type="Texture2D" uid="uid://bhnwgauo5mrps" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Die/Die06.png" id="14_nf8w3"]
[ext_resource type="Texture2D" uid="uid://b2yxwheqrdptj" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Die/Die07.png" id="15_8wcdq"]
[ext_resource type="Texture2D" uid="uid://of3pv1iyugd7" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Die/Die08.png" id="16_x0j34"]
[ext_resource type="Texture2D" uid="uid://8mva8g453ccb" path="res://Art_Components/PixelPrototypePlayer/Pixel Prototype Player/Sprites/Die/Die09.png" id="17_c3hen"]
[ext_resource type="Script" uid="uid://cnxm24jqclb68" path="res://Component/health.gd" id="18_lmtp0"]
[ext_resource type="Script" uid="uid://bet3nodk2voxv" path="res://Component/hurtbox_template.gd" id="19_imgf7"]
[ext_resource type="Script" uid="uid://ba6pwl0vfuyp" path="res://Component/stagger.gd" id="20_2a35u"]
[ext_resource type="Script" uid="uid://b0uasmutdnguo" path="res://chars/target_lock.gd" id="20_aucs6"]
[ext_resource type="Script" uid="uid://cr58jnxs33hft" path="res://Component/functions/deathHandler.gd" id="21_dgx35"]
[ext_resource type="Script" uid="uid://daq7xh1e6l7u6" path="res://chars/idle.gd" id="22_aybfo"]
[ext_resource type="Script" uid="uid://c4yno8xy5erif" path="res://chars/death.gd" id="23_1egk7"]
[ext_resource type="BehaviorTree" uid="uid://dutys3rie5tyk" path="res://ai/trees/death.tres" id="24_k5lyg"]
[ext_resource type="BehaviorTree" uid="uid://bv145y6poevxt" path="res://ai/trees/idle_only.tres" id="25_m3d4o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jm6kd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_06ane")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m3d4o")
}, {
"duration": 1.0,
"texture": ExtResource("3_ni1v3")
}, {
"duration": 1.0,
"texture": ExtResource("4_2a35u")
}, {
"duration": 1.0,
"texture": ExtResource("5_wrgb2")
}, {
"duration": 1.0,
"texture": ExtResource("6_5be7e")
}, {
"duration": 1.0,
"texture": ExtResource("7_c6vqc")
}, {
"duration": 1.0,
"texture": ExtResource("8_02m4m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ej1wm")
}, {
"duration": 1.0,
"texture": ExtResource("10_2okjt")
}, {
"duration": 1.0,
"texture": ExtResource("11_03adl")
}, {
"duration": 1.0,
"texture": ExtResource("12_ibv3t")
}, {
"duration": 1.0,
"texture": ExtResource("13_fg2nf")
}, {
"duration": 1.0,
"texture": ExtResource("14_nf8w3")
}, {
"duration": 1.0,
"texture": ExtResource("15_8wcdq")
}, {
"duration": 1.0,
"texture": ExtResource("16_x0j34")
}, {
"duration": 1.0,
"texture": ExtResource("17_c3hen")
}],
"loop": true,
"name": &"dying",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nqjiv"]
particle_flag_disable_z = true
inherit_velocity_ratio = 0.229
spread = 180.0
initial_velocity_min = 34.48
initial_velocity_max = 34.48
linear_accel_min = -42.53
linear_accel_max = 33.33
damping_max = 30.46

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pijyw"]
radius = 12.0
height = 40.0

[sub_resource type="Animation" id="Animation_hunh5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, -15)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.3, 0.3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D/Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_so0jv"]
resource_name = "dead"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jv0x6"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dying"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.266667, 0.4, 0.533333, 0.733333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_ua0om"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.833333, 0.9, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5, -5), Vector2(-19, -29)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D/Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_so0jv"]
_data = {
&"RESET": SubResource("Animation_hunh5"),
&"dead": SubResource("Animation_so0jv"),
&"death": SubResource("Animation_jv0x6"),
&"idle": SubResource("Animation_ua0om")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hunh5"]
size = Vector2(26, 43)

[sub_resource type="BlackboardPlan" id="BlackboardPlan_hunh5"]

[sub_resource type="BlackboardPlan" id="BlackboardPlan_06ane"]

[node name="SleepingGuard" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_m3d4o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -22)
sprite_frames = SubResource("SpriteFrames_jm6kd")
flip_h = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="AnimatedSprite2D"]
modulate = Color(1, 0.238975, 0.0150355, 1)
position = Vector2(0, 24)
emitting = false
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
trail_enabled = true
trail_lifetime = 0.1
process_material = SubResource("ParticleProcessMaterial_nqjiv")

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-10, -15)
scale = Vector2(0.3, 0.3)

[node name="Label" type="Label" parent="AnimatedSprite2D/Sprite2D"]
offset_right = 40.0
offset_bottom = 23.0
text = "z
"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_pijyw")

[node name="Health" type="Node" parent="."]
script = ExtResource("18_lmtp0")
max_health = 1
metadata/_custom_type_script = "uid://cnxm24jqclb68"

[node name="Stagger" type="Node" parent="."]
script = ExtResource("20_2a35u")
metadata/_custom_type_script = "uid://ba6pwl0vfuyp"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_so0jv")
}

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health", "stagger")]
position = Vector2(0, -22)
collision_layer = 16
collision_mask = 64
script = ExtResource("19_imgf7")
health = NodePath("../Health")
stagger = NodePath("../Stagger")
metadata/_custom_type_script = "uid://bet3nodk2voxv"

[node name="hurt_box_collision" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, 22.5)
shape = SubResource("RectangleShape2D_hunh5")

[node name="LimboHSM" type="LimboHSM" parent="."]

[node name="Death" type="LimboState" parent="LimboHSM" node_paths=PackedStringArray("actor", "animation_player")]
script = ExtResource("23_1egk7")
actor = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")

[node name="Idle" type="LimboState" parent="LimboHSM" node_paths=PackedStringArray("actor")]
script = ExtResource("22_aybfo")
actor = NodePath("../..")

[node name="Dying" type="BTState" parent="LimboHSM"]
behavior_tree = ExtResource("24_k5lyg")
blackboard_plan = SubResource("BlackboardPlan_hunh5")

[node name="DeathHandler" type="Node" parent="." node_paths=PackedStringArray("actor", "sm", "animation_player", "health")]
script = ExtResource("21_dgx35")
actor = NodePath("..")
sm = NodePath("../LimboHSM")
animation_player = NodePath("../AnimationPlayer")
health = NodePath("../Health")
metadata/_custom_type_script = "uid://cr58jnxs33hft"

[node name="BTPlayer" type="BTPlayer" parent="."]
behavior_tree = ExtResource("25_m3d4o")
blackboard_plan = SubResource("BlackboardPlan_06ane")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="TargetLock" type="Node2D" parent="."]
script = ExtResource("20_aucs6")
metadata/_custom_type_script = "uid://b0uasmutdnguo"

[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="received_damage" from="HurtBox" to="." method="_on_hurt_box_received_damage"]
[connection signal="active_state_changed" from="LimboHSM" to="." method="_on_limbo_hsm_active_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
